# Rust-Weather-Station

./: .gitignore  Cargo.toml  README.md  ota_server.py  out  output  partitions.csv  sdkconfig.defaults  temp.rs  ~
.cargo/: config.toml
.gitbak/: COMMIT_EDITMSG  ORIG_HEAD  index
.gitbak/logs/: HEAD
.gitbak/logs/refs/: stash
.gitbak/logs/refs/heads/: master
.gitbak/refs/: stash
.github/workflows/: rust_ci.yml
examples/: dht_mqtt_queue.rs
ota_server/: Cargo.toml
ota_server/src/: main.rs
src/: config.rs  global.rs  lib.rs  main.rs  mqtt.rs  network.rs  platform.rs  rtc_manager.rs  sensors.rs  utils.rs  weather_station.rs  wifi.rs
src/tasks/: anemo_task.rs  as5600_task.rs  dht_task.rs  ina219_task.rs  mod.rs  mqtt_task.rs  ota_task.rs  pluvio_task.rs  wifi_task.rs
