[package]
name = "weather-station"
version = "0.1.0"
authors = ["Axel chabrerie <114242486+Axel-ex@users.noreply.github.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "weather-station"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.49", default-features = false }
as5600 = "0.8.0"
shared-bus = "0.3.1"
bme680 = "0.6.0"
toml-cfg = "0.2.0"
anyhow = "1.0.86"
heapless = "0.8.0"
embedded-hal-bus = "0.2.0"
embedded-hal = "1.0.0"
bosch-bme680 = "1.0.2"
once_cell = "1.19.0"

[build-dependencies]
embuild = "0.32.0"
