[package]
name = "weather_station_v2"
version = "0.1.0"
authors = ["Axel chabrerie <114242486+Axel-ex@users.noreply.github.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "weather_station_v2"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.50", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
bosch-bme680 = "1.0.3"
embedded-hal-bus = "0.2.0"
toml-cfg = "0.2.0"
once_cell = "1.20.2"
as5600 = "0.8.0"
anyhow = "1.0.95"
heapless = "0.8.0"
embedded-dht-rs = { version = "0.4.0", features = ["dht22"] }
dht-sensor = {git = "https://github.com/michaelbeaumont/dht-sensor.git", branch = "main" } 
ina219 = "0.2.0"

[build-dependencies]
embuild = "0.33"

[package.metadata.toml_config]
file = "cfg.toml"
